# xerces-c

./: .gitignore  CMakeLists.txt  config.h.cmake.in
cmake/: XercesDLL.cmake  XercesWarnings.cmake  XercesXPSupport.cmake
cmake-modules/: check_cpu.cmake  check_functions.cmake  check_headers.cmake  configure.cmake  cxx_have_bool.cmake  cxx_have_delete.cmake  cxx_have_namespaces.cmake  cxx_have_std_libs.cmake  cxx_have_std_namespace.cmake  cxx_have_wchar.cmake  xerces_int_types.cmake  xerces_msgloader_selection.cmake  xerces_mutexmgr_selection.cmake  xerces_netaccessor_selection.cmake  xerces_transcoder_selection.cmake
src/: CMakeLists.txt
src/xercesc/util/: Xerces_autoconf_config.hpp.cmake.in
