cmake_minimum_required (VERSION 2.8.9)
project (XercesLib)

#====================================================
# xerces_lib
#====================================================

set(COMMON_SRC_XERCESC
  ${XERCESC}/util/ArrayIndexOutOfBoundsException.hpp
  ${XERCESC}/util/Base64.hpp
  ${XERCESC}/util/BaseRefVectorOf.hpp
  ${XERCESC}/util/BinFileInputStream.hpp
  ${XERCESC}/util/BinInputStream.hpp
  ${XERCESC}/util/BinMemInputStream.hpp
  ${XERCESC}/util/BitOps.hpp
  ${XERCESC}/util/BitSet.hpp
  ${XERCESC}/util/CountedPointer.hpp
  ${XERCESC}/util/DefaultPanicHandler.hpp
  ${XERCESC}/util/EmptyStackException.hpp
  ${XERCESC}/util/EncodingValidator.hpp
  ${XERCESC}/util/FlagJanitor.hpp
  ${XERCESC}/util/Hash2KeysSetOf.hpp
  ${XERCESC}/util/Hashers.hpp
  ${XERCESC}/util/HexBin.hpp
  ${XERCESC}/util/IllegalArgumentException.hpp
  ${XERCESC}/util/InvalidCastException.hpp
  ${XERCESC}/util/IOException.hpp
  ${XERCESC}/util/Janitor.hpp
  ${XERCESC}/util/KeyRefPair.hpp
  ${XERCESC}/util/KeyValuePair.hpp
  ${XERCESC}/util/KVStringPair.hpp
  ${XERCESC}/util/Mutexes.hpp
  ${XERCESC}/util/NameIdPool.hpp
  ${XERCESC}/util/NoSuchElementException.hpp
  ${XERCESC}/util/NullPointerException.hpp
  ${XERCESC}/util/OutOfMemoryException.hpp
  ${XERCESC}/util/PanicHandler.hpp
  ${XERCESC}/util/PlatformUtils.hpp
  ${XERCESC}/util/PSVIUni.hpp
  ${XERCESC}/util/QName.hpp
  ${XERCESC}/util/RefArrayOf.hpp
  ${XERCESC}/util/RefArrayVectorOf.hpp
  ${XERCESC}/util/RefHash2KeysTableOf.hpp
  ${XERCESC}/util/RefHash3KeysIdPool.hpp
  ${XERCESC}/util/RefHashTableOf.hpp
  ${XERCESC}/util/RefStackOf.hpp
  ${XERCESC}/util/RefVectorOf.hpp
  ${XERCESC}/util/RuntimeException.hpp
  ${XERCESC}/util/SchemaDateTimeException.hpp
  ${XERCESC}/util/StringPool.hpp
  ${XERCESC}/util/SynchronizedStringPool.hpp
  ${XERCESC}/util/TranscodingException.hpp
  ${XERCESC}/util/TransService.hpp
  ${XERCESC}/util/UnexpectedEOFException.hpp
  ${XERCESC}/util/UnsupportedEncodingException.hpp
  ${XERCESC}/util/UTFDataFormatException.hpp
  ${XERCESC}/util/ValueArrayOf.hpp
  ${XERCESC}/util/ValueHashTableOf.hpp
  ${XERCESC}/util/ValueStackOf.hpp
  ${XERCESC}/util/ValueVectorOf.hpp
  ${XERCESC}/util/Xerces_autoconf_config.hpp
  ${XERCESC}/util/XercesDefs.hpp
  ${XERCESC}/util/XercesVersion.hpp
  ${XERCESC}/util/XMemory.hpp
  ${XERCESC}/util/XML256TableTranscoder.hpp
  ${XERCESC}/util/XML88591Transcoder.hpp
  ${XERCESC}/util/XMLAbstractDoubleFloat.hpp
  ${XERCESC}/util/XMLASCIITranscoder.hpp
  ${XERCESC}/util/XMLBigDecimal.hpp
  ${XERCESC}/util/XMLBigInteger.hpp
  ${XERCESC}/util/XMLChar.hpp
  ${XERCESC}/util/XMLChTranscoder.hpp
  ${XERCESC}/util/XMLDateTime.hpp
  ${XERCESC}/util/XMLDOMMsg.hpp
  ${XERCESC}/util/XMLDouble.hpp
  ${XERCESC}/util/XMLEBCDICTranscoder.hpp
  ${XERCESC}/util/XMLEntityResolver.hpp
  ${XERCESC}/util/XMLEnumerator.hpp
  ${XERCESC}/util/XMLException.hpp
  ${XERCESC}/util/XMLExceptMsgs.hpp
  ${XERCESC}/util/XMLFloat.hpp
  ${XERCESC}/util/XMLIBM1047Transcoder.hpp
  ${XERCESC}/util/XMLIBM1140Transcoder.hpp
  ${XERCESC}/util/XMLInitializer.hpp
  ${XERCESC}/util/XMLInteger.hpp
  ${XERCESC}/util/XMLMsgLoader.hpp
  ${XERCESC}/util/XMLNetAccessor.hpp
  ${XERCESC}/util/XMLNumber.hpp
  ${XERCESC}/util/XMLResourceIdentifier.hpp
  ${XERCESC}/util/XMLString.hpp
  ${XERCESC}/util/XMLStringTokenizer.hpp
  ${XERCESC}/util/XMLUCS4Transcoder.hpp
  ${XERCESC}/util/XMLUni.hpp
  ${XERCESC}/util/XMLUniDefs.hpp
  ${XERCESC}/util/XMLUri.hpp
  ${XERCESC}/util/XMLURL.hpp
  ${XERCESC}/util/XMLUTF16Transcoder.hpp
  ${XERCESC}/util/XMLUTF8Transcoder.hpp
  ${XERCESC}/util/XMLWin1252Transcoder.hpp
  ${XERCESC}/util/NetAccessors/BinHTTPInputStreamCommon.hpp
  ${XERCESC}/util/regx/ASCIIRangeFactory.hpp
  ${XERCESC}/util/regx/BlockRangeFactory.hpp
  ${XERCESC}/util/regx/BMPattern.hpp
  ${XERCESC}/util/regx/CharToken.hpp
  ${XERCESC}/util/regx/ClosureToken.hpp
  ${XERCESC}/util/regx/ConcatToken.hpp
  ${XERCESC}/util/regx/Match.hpp
  ${XERCESC}/util/regx/Op.hpp
  ${XERCESC}/util/regx/OpFactory.hpp
  ${XERCESC}/util/regx/ParenToken.hpp
  ${XERCESC}/util/regx/ParserForXMLSchema.hpp
  ${XERCESC}/util/regx/RangeFactory.hpp
  ${XERCESC}/util/regx/RangeToken.hpp
  ${XERCESC}/util/regx/RangeTokenMap.hpp
  ${XERCESC}/util/regx/RegularExpression.hpp
  ${XERCESC}/util/regx/RegxDefs.hpp
  ${XERCESC}/util/regx/RegxParser.hpp
  ${XERCESC}/util/regx/RegxUtil.hpp
  ${XERCESC}/util/regx/StringToken.hpp
  ${XERCESC}/util/regx/Token.hpp
  ${XERCESC}/util/regx/TokenFactory.hpp
  ${XERCESC}/util/regx/TokenInc.hpp
  ${XERCESC}/util/regx/UniCharTable.hpp
  ${XERCESC}/util/regx/UnicodeRangeFactory.hpp
  ${XERCESC}/util/regx/UnionToken.hpp
  ${XERCESC}/util/regx/XMLRangeFactory.hpp
  ${XERCESC}/util/regx/XMLUniCharacter.hpp
  ${XERCESC}/framework/LocalFileFormatTarget.hpp
  ${XERCESC}/framework/LocalFileInputSource.Hpp
  ${XERCESC}/framework/MemBufFormatTarget.hpp
  ${XERCESC}/framework/MemBufInputSource.hpp
  ${XERCESC}/framework/MemoryManager.hpp
  ${XERCESC}/framework/StdInInputSource.hpp
  ${XERCESC}/framework/StdOutFormatTarget.hpp
  ${XERCESC}/framework/URLInputSource.hpp
  ${XERCESC}/framework/ValidationContext.hpp
  ${XERCESC}/framework/Wrapper4DOMLSInput.hpp
  ${XERCESC}/framework/Wrapper4InputSource.hpp
  ${XERCESC}/framework/XMLAttDef.hpp
  ${XERCESC}/framework/XMLAttDefList.hpp
  ${XERCESC}/framework/XMLAttr.hpp
  ${XERCESC}/framework/XMLBuffer.hpp
  ${XERCESC}/framework/XMLBufferMgr.hpp
  ${XERCESC}/framework/XMLContentModel.hpp
  ${XERCESC}/framework/XMLDocumentHandler.hpp
  ${XERCESC}/framework/XMLElementDecl.hpp
  ${XERCESC}/framework/XMLEntityDecl.hpp
  ${XERCESC}/framework/XMLEntityHandler.hpp
  ${XERCESC}/framework/XMLErrorCodes.hpp
  ${XERCESC}/framework/XMLErrorReporter.hpp
  ${XERCESC}/framework/XMLFormatter.hpp
  ${XERCESC}/framework/XMLGrammarPoolImpl.hpp
  ${XERCESC}/framework/XMLNotationDecl.hpp
  ${XERCESC}/framework/XMLPScanToken.hpp
  ${XERCESC}/framework/XMLRecognizer.hpp
  ${XERCESC}/framework/XMLRefInfo.hpp
  ${XERCESC}/framework/XMLSchemaDescription.hpp
  ${XERCESC}/framework/XMLValidator.hpp
  ${XERCESC}/framework/XMLValidityCodes.hpp
  ${XERCESC}/framework/psvi/PSVIAttribute.hpp
  ${XERCESC}/framework/psvi/PSVIAttributeList.hpp
  ${XERCESC}/framework/psvi/PSVIElement.hpp
  ${XERCESC}/framework/psvi/PSVIHandler.hpp
  ${XERCESC}/framework/psvi/PSVIItem.hpp
  ${XERCESC}/framework/psvi/XSAnnotation.hpp
  ${XERCESC}/framework/psvi/XSAttributeDeclaration.hpp
  ${XERCESC}/framework/psvi/XSAttributeGroupDefinition.hpp
  ${XERCESC}/framework/psvi/XSAttributeUse.hpp
  ${XERCESC}/framework/psvi/XSComplexTypeDefinition.hpp
  ${XERCESC}/framework/psvi/XSConstants.hpp
  ${XERCESC}/framework/psvi/XSElementDeclaration.hpp
  ${XERCESC}/framework/psvi/XSFacet.hpp
  ${XERCESC}/framework/psvi/XSIDCDefinition.hpp
  ${XERCESC}/framework/psvi/XSModel.hpp
  ${XERCESC}/framework/psvi/XSModelGroup.hpp
  ${XERCESC}/framework/psvi/XSModelGroupDefinition.hpp
  ${XERCESC}/framework/psvi/XSMultiValueFacet.hpp
  ${XERCESC}/framework/psvi/XSNamedMap.hpp
  ${XERCESC}/framework/psvi/XSNamespaceItem.hpp
  ${XERCESC}/framework/psvi/XSNotationDeclaration.hpp
  ${XERCESC}/framework/psvi/XSObject.hpp
  ${XERCESC}/framework/psvi/XSParticle.hpp
  ${XERCESC}/framework/psvi/XSSimpleTypeDefinition.hpp
  ${XERCESC}/framework/psvi/XSTypeDefinition.hpp
  ${XERCESC}/framework/psvi/XSValue.hpp
  ${XERCESC}/framework/psvi/XSWildcard.hpp
  ${XERCESC}/internal/BinFileOutputStream.hpp
  ${XERCESC}/internal/BinMemOutputStream.hpp
  ${XERCESC}/framework/BinOutputStream.hpp
  ${XERCESC}/internal/CharTypeTables.hpp
  ${XERCESC}/internal/DGXMLScanner.hpp
  ${XERCESC}/internal/ElemStack.hpp
  ${XERCESC}/internal/EndOfEntityException.hpp
  ${XERCESC}/internal/IANAEncodings.hpp
  ${XERCESC}/internal/IGXMLScanner.hpp
  ${XERCESC}/internal/MemoryManagerImpl.hpp
  ${XERCESC}/internal/ReaderMgr.hpp
  ${XERCESC}/internal/SGXMLScanner.hpp
  ${XERCESC}/internal/ValidationContextImpl.hpp
  ${XERCESC}/internal/VecAttributesImpl.hpp
  ${XERCESC}/internal/VecAttrListImpl.hpp
  ${XERCESC}/internal/WFXMLScanner.hpp
  ${XERCESC}/internal/XMLInternalErrorHandler.hpp
  ${XERCESC}/internal/XMLReader.hpp
  ${XERCESC}/internal/XMLScanner.hpp
  ${XERCESC}/internal/XMLScannerResolver.hpp
  ${XERCESC}/internal/XSAXMLScanner.hpp
  ${XERCESC}/internal/XTemplateSerializer.hpp
  ${XERCESC}/sax/AttributeList.hpp
  ${XERCESC}/sax/DocumentHandler.hpp
  ${XERCESC}/sax/DTDHandler.hpp
  ${XERCESC}/sax/EntityResolver.hpp
  ${XERCESC}/sax/ErrorHandler.hpp
  ${XERCESC}/sax/HandlerBase.hpp
  ${XERCESC}/sax/InputSource.hpp
  ${XERCESC}/sax/Locator.hpp
  ${XERCESC}/sax/Parser.hpp
  ${XERCESC}/sax/SAXException.hpp
  ${XERCESC}/sax/SAXParseException.hpp
  ${XERCESC}/parsers/AbstractDOMParser.hpp
  ${XERCESC}/parsers/DOMLSParserImpl.hpp
  ${XERCESC}/parsers/SAX2XMLFilterImpl.hpp
  ${XERCESC}/parsers/SAX2XMLReaderImpl.hpp
  ${XERCESC}/parsers/SAXParser.hpp
  ${XERCESC}/parsers/XercesDOMParser.hpp
  ${XERCESC}/validators/common/AllContentModel.hpp
  ${XERCESC}/validators/common/CMAny.hpp
  ${XERCESC}/validators/common/CMBinaryOp.hpp
  ${XERCESC}/validators/common/CMLeaf.hpp
  ${XERCESC}/validators/common/CMNode.hpp
  ${XERCESC}/validators/common/CMRepeatingLeaf.hpp
  ${XERCESC}/validators/common/CMStateSet.hpp
  ${XERCESC}/validators/common/CMUnaryOp.hpp
  ${XERCESC}/validators/common/ContentLeafNameTypeVector.hpp
  ${XERCESC}/validators/common/ContentSpecNode.hpp
  ${XERCESC}/validators/common/DFAContentModel.hpp
  ${XERCESC}/validators/common/Grammar.hpp
  ${XERCESC}/validators/common/GrammarResolver.hpp
  ${XERCESC}/validators/common/MixedContentModel.hpp
  ${XERCESC}/validators/common/SimpleContentModel.hpp
  ${XERCESC}/validators/datatype/AbstractNumericFacetValidator.hpp
  ${XERCESC}/validators/datatype/AbstractNumericValidator.hpp
  ${XERCESC}/validators/datatype/AbstractStringValidator.hpp
  ${XERCESC}/validators/datatype/AnySimpleTypeDatatypeValidator.hpp
  ${XERCESC}/validators/datatype/AnyURIDatatypeValidator.hpp
  ${XERCESC}/validators/datatype/Base64BinaryDatatypeValidator.hpp
  ${XERCESC}/validators/datatype/BooleanDatatypeValidator.hpp
  ${XERCESC}/validators/datatype/DatatypeValidator.hpp
  ${XERCESC}/validators/datatype/DatatypeValidatorFactory.hpp
  ${XERCESC}/validators/datatype/DateDatatypeValidator.hpp
  ${XERCESC}/validators/datatype/DateTimeDatatypeValidator.hpp
  ${XERCESC}/validators/datatype/DateTimeValidator.hpp
  ${XERCESC}/validators/datatype/DayDatatypeValidator.hpp
  ${XERCESC}/validators/datatype/DecimalDatatypeValidator.hpp
  ${XERCESC}/validators/datatype/DoubleDatatypeValidator.hpp
  ${XERCESC}/validators/datatype/DurationDatatypeValidator.hpp
  ${XERCESC}/validators/datatype/ENTITYDatatypeValidator.hpp
  ${XERCESC}/validators/datatype/FloatDatatypeValidator.hpp
  ${XERCESC}/validators/datatype/HexBinaryDatatypeValidator.hpp
  ${XERCESC}/validators/datatype/IDDatatypeValidator.hpp
  ${XERCESC}/validators/datatype/IDREFDatatypeValidator.hpp
  ${XERCESC}/validators/datatype/InvalidDatatypeFacetException.hpp
  ${XERCESC}/validators/datatype/InvalidDatatypeValueException.hpp
  ${XERCESC}/validators/datatype/ListDatatypeValidator.hpp
  ${XERCESC}/validators/datatype/MonthDatatypeValidator.hpp
  ${XERCESC}/validators/datatype/MonthDayDatatypeValidator.hpp
  ${XERCESC}/validators/datatype/NameDatatypeValidator.hpp
  ${XERCESC}/validators/datatype/NCNameDatatypeValidator.hpp
  ${XERCESC}/validators/datatype/NOTATIONDatatypeValidator.hpp
  ${XERCESC}/validators/datatype/QNameDatatypeValidator.hpp
  ${XERCESC}/validators/datatype/StringDatatypeValidator.hpp
  ${XERCESC}/validators/datatype/TimeDatatypeValidator.hpp
  ${XERCESC}/validators/datatype/UnionDatatypeValidator.hpp
  ${XERCESC}/validators/datatype/XMLCanRepGroup.hpp
  ${XERCESC}/validators/datatype/YearDatatypeValidator.hpp
  ${XERCESC}/validators/datatype/YearMonthDatatypeValidator.hpp
  ${XERCESC}/validators/DTD/DocTypeHandler.hpp
  ${XERCESC}/validators/DTD/DTDAttDef.hpp
  ${XERCESC}/validators/DTD/DTDAttDefList.hpp
  ${XERCESC}/validators/DTD/DTDElementDecl.hpp
  ${XERCESC}/validators/DTD/DTDEntityDecl.hpp
  ${XERCESC}/validators/DTD/DTDGrammar.hpp
  ${XERCESC}/validators/DTD/DTDScanner.hpp
  ${XERCESC}/validators/DTD/DTDValidator.hpp
  ${XERCESC}/validators/DTD/XMLDTDDescriptionImpl.hpp
  ${XERCESC}/validators/schema/ComplexTypeInfo.hpp
  ${XERCESC}/validators/schema/GeneralAttributeCheck.hpp
  ${XERCESC}/validators/schema/NamespaceScope.hpp
  ${XERCESC}/validators/schema/PSVIDefs.hpp
  ${XERCESC}/validators/schema/SchemaAttDef.hpp
  ${XERCESC}/validators/schema/SchemaAttDefList.hpp
  ${XERCESC}/validators/schema/SchemaElementDecl.hpp
  ${XERCESC}/validators/schema/SchemaGrammar.hpp
  ${XERCESC}/validators/schema/SchemaInfo.hpp
  ${XERCESC}/validators/schema/SchemaSymbols.hpp
  ${XERCESC}/validators/schema/SchemaValidator.hpp
  ${XERCESC}/validators/schema/SubstitutionGroupComparator.hpp
  ${XERCESC}/validators/schema/TraverseSchema.hpp
  ${XERCESC}/validators/schema/XercesAttGroupInfo.hpp
  ${XERCESC}/validators/schema/XercesElementWildcard.hpp
  ${XERCESC}/validators/schema/XercesGroupInfo.hpp
  ${XERCESC}/validators/schema/XMLSchemaDescriptionImpl.hpp
  ${XERCESC}/validators/schema/XSDDOMParser.hpp
  ${XERCESC}/validators/schema/XSDErrorReporter.hpp
  ${XERCESC}/validators/schema/XSDLocator.hpp
  ${XERCESC}/validators/schema/XUtil.hpp
  ${XERCESC}/validators/schema/identity/FieldActivator.hpp
  ${XERCESC}/validators/schema/identity/FieldValueMap.hpp
  ${XERCESC}/validators/schema/identity/IC_Field.hpp
  ${XERCESC}/validators/schema/identity/IC_Key.hpp
  ${XERCESC}/validators/schema/identity/IC_KeyRef.hpp
  ${XERCESC}/validators/schema/identity/IC_Selector.hpp
  ${XERCESC}/validators/schema/identity/IC_Unique.hpp
  ${XERCESC}/validators/schema/identity/IdentityConstraint.hpp
  ${XERCESC}/validators/schema/identity/IdentityConstraintHandler.hpp
  ${XERCESC}/validators/schema/identity/ValueStore.hpp
  ${XERCESC}/validators/schema/identity/ValueStoreCache.hpp
  ${XERCESC}/validators/schema/identity/XercesXPath.hpp
  ${XERCESC}/validators/schema/identity/XPathException.hpp
  ${XERCESC}/validators/schema/identity/XPathMatcher.hpp
  ${XERCESC}/validators/schema/identity/XPathMatcherStack.hpp
  ${XERCESC}/validators/schema/identity/XPathSymbols.hpp
  ${XERCESC}/sax2/Attributes.hpp
  ${XERCESC}/sax2/ContentHandler.hpp
  ${XERCESC}/sax2/DeclHandler.hpp
  ${XERCESC}/sax2/DefaultHandler.hpp
  ${XERCESC}/sax2/LexicalHandler.hpp
  ${XERCESC}/sax2/SAX2XMLFilter.hpp
  ${XERCESC}/sax2/SAX2XMLReader.hpp
  ${XERCESC}/sax2/XMLReaderFactory.hpp
  ${XERCESC}/dom/DOMAttr.hpp
  ${XERCESC}/dom/DOMCDATASection.hpp
  ${XERCESC}/dom/DOMCharacterData.hpp
  ${XERCESC}/dom/DOMComment.hpp
  ${XERCESC}/dom/DOMConfiguration.hpp
  ${XERCESC}/dom/DOMDocument.hpp
  ${XERCESC}/dom/DOMDocumentFragment.hpp
  ${XERCESC}/dom/DOMDocumentRange.hpp
  ${XERCESC}/dom/DOMDocumentTraversal.hpp
  ${XERCESC}/dom/DOMDocumentType.hpp
  ${XERCESC}/dom/DOMElement.hpp
  ${XERCESC}/dom/DOMEntity.hpp
  ${XERCESC}/dom/DOMEntityReference.hpp
  ${XERCESC}/dom/DOMError.hpp
  ${XERCESC}/dom/DOMErrorHandler.hpp
  ${XERCESC}/dom/DOMException.hpp
  ${XERCESC}/dom/DOMImplementation.hpp
  ${XERCESC}/dom/DOMImplementationList.hpp
  ${XERCESC}/dom/DOMImplementationLS.hpp
  ${XERCESC}/dom/DOMImplementationRegistry.hpp
  ${XERCESC}/dom/DOMImplementationSource.hpp
  ${XERCESC}/dom/DOMLocator.hpp
  ${XERCESC}/dom/DOMLSException.hpp
  ${XERCESC}/dom/DOMLSInput.hpp
  ${XERCESC}/dom/DOMLSOutput.hpp
  ${XERCESC}/dom/DOMLSParser.hpp
  ${XERCESC}/dom/DOMLSParserFilter.hpp
  ${XERCESC}/dom/DOMLSResourceResolver.hpp
  ${XERCESC}/dom/DOMLSSerializer.hpp
  ${XERCESC}/dom/DOMLSSerializerFilter.hpp
  ${XERCESC}/dom/DOMNamedNodeMap.hpp
  ${XERCESC}/dom/DOMNode.hpp
  ${XERCESC}/dom/DOMNodeFilter.hpp
  ${XERCESC}/dom/DOMNodeIterator.hpp
  ${XERCESC}/dom/DOMNodeList.hpp
  ${XERCESC}/dom/DOMNotation.hpp
  ${XERCESC}/dom/DOMProcessingInstruction.hpp
  ${XERCESC}/dom/DOMRange.hpp
  ${XERCESC}/dom/DOMRangeException.hpp
  ${XERCESC}/dom/DOMStringList.hpp
  ${XERCESC}/dom/DOMText.hpp
  ${XERCESC}/dom/DOMTreeWalker.hpp
  ${XERCESC}/dom/DOMTypeInfo.hpp
  ${XERCESC}/dom/DOMUserDataHandler.hpp
  ${XERCESC}/dom/DOMXPathEvaluator.hpp
  ${XERCESC}/dom/DOMXPathException.hpp
  ${XERCESC}/dom/DOMXPathExpression.hpp
  ${XERCESC}/dom/DOMXPathNamespace.hpp
  ${XERCESC}/dom/DOMXPathNSResolver.hpp
  ${XERCESC}/dom/DOMXPathResult.hpp
  ${XERCESC}/dom/impl/DOMAttrImpl.hpp
  ${XERCESC}/dom/impl/DOMAttrMapImpl.hpp
  ${XERCESC}/dom/impl/DOMAttrNSImpl.hpp
  ${XERCESC}/dom/impl/DOMCasts.hpp
  ${XERCESC}/dom/impl/DOMCDATASectionImpl.hpp
  ${XERCESC}/dom/impl/DOMCharacterDataImpl.hpp
  ${XERCESC}/dom/impl/DOMChildNode.hpp
  ${XERCESC}/dom/impl/DOMCommentImpl.hpp
  ${XERCESC}/dom/impl/DOMConfigurationImpl.hpp
  ${XERCESC}/dom/impl/DOMDeepNodeListImpl.hpp
  ${XERCESC}/dom/impl/DOMDeepNodeListPool.hpp
  ${XERCESC}/dom/impl/DOMDocumentFragmentImpl.hpp
  ${XERCESC}/dom/impl/DOMDocumentImpl.hpp
  ${XERCESC}/dom/impl/DOMDocumentTypeImpl.hpp
  ${XERCESC}/dom/impl/DOMElementImpl.hpp
  ${XERCESC}/dom/impl/DOMElementNSImpl.hpp
  ${XERCESC}/dom/impl/DOMEntityImpl.hpp
  ${XERCESC}/dom/impl/DOMEntityReferenceImpl.hpp
  ${XERCESC}/dom/impl/DOMErrorImpl.hpp
  ${XERCESC}/dom/impl/DOMImplementationImpl.hpp
  ${XERCESC}/dom/impl/DOMImplementationListImpl.hpp
  ${XERCESC}/dom/impl/DOMLocatorImpl.hpp
  ${XERCESC}/dom/impl/DOMLSInputImpl.hpp
  ${XERCESC}/dom/impl/DOMLSOutputImpl.hpp
  ${XERCESC}/dom/impl/DOMLSSerializerImpl.hpp
  ${XERCESC}/dom/impl/DOMNamedNodeMapImpl.hpp
  ${XERCESC}/dom/impl/DOMNodeIDMap.hpp
  ${XERCESC}/dom/impl/DOMNodeImpl.hpp
  ${XERCESC}/dom/impl/DOMNodeIteratorImpl.hpp
  ${XERCESC}/dom/impl/DOMNodeListImpl.hpp
  ${XERCESC}/dom/impl/DOMNodeVector.hpp
  ${XERCESC}/dom/impl/DOMNormalizer.hpp
  ${XERCESC}/dom/impl/DOMNotationImpl.hpp
  ${XERCESC}/dom/impl/DOMParentNode.hpp
  ${XERCESC}/dom/impl/DOMProcessingInstructionImpl.hpp
  ${XERCESC}/dom/impl/DOMRangeImpl.hpp
  ${XERCESC}/dom/impl/DOMStringListImpl.hpp
  ${XERCESC}/dom/impl/DOMStringPool.hpp
  ${XERCESC}/dom/impl/DOMTextImpl.hpp
  ${XERCESC}/dom/impl/DOMTreeWalkerImpl.hpp
  ${XERCESC}/dom/impl/DOMTypeInfoImpl.hpp
  ${XERCESC}/dom/impl/DOMXPathExpressionImpl.hpp
  ${XERCESC}/dom/impl/DOMXPathNSResolverImpl.hpp
  ${XERCESC}/dom/impl/DOMXPathResultImpl.hpp
  ${XERCESC}/dom/impl/XSDElementNSImpl.hpp
  ${XERCESC}/xinclude/XIncludeDOMDocumentProcessor.hpp
  ${XERCESC}/xinclude/XIncludeLocation.hpp
  ${XERCESC}/xinclude/XIncludeUtils.hpp
  ${XERCESC}/util/Base64.cpp
  ${XERCESC}/util/BinFileInputStream.cpp
  ${XERCESC}/util/BinInputStream.cpp
  ${XERCESC}/util/BinMemInputStream.cpp
  ${XERCESC}/util/BitSet.cpp
  ${XERCESC}/util/DefaultPanicHandler.cpp
  ${XERCESC}/util/EncodingValidator.cpp
  ${XERCESC}/util/HeaderDummy.cpp
  ${XERCESC}/util/HexBin.cpp
  ${XERCESC}/util/KVStringPair.cpp
  ${XERCESC}/util/Mutexes.cpp
  ${XERCESC}/util/PanicHandler.cpp
  ${XERCESC}/util/PlatformUtils.cpp
  ${XERCESC}/util/PSVIUni.cpp
  ${XERCESC}/util/QName.cpp
  ${XERCESC}/util/StringPool.cpp
  ${XERCESC}/util/SynchronizedStringPool.cpp
  ${XERCESC}/util/TransService.cpp
  ${XERCESC}/util/XMemory.cpp
  ${XERCESC}/util/XML256TableTranscoder.cpp
  ${XERCESC}/util/XML88591Transcoder.cpp
  ${XERCESC}/util/XMLAbstractDoubleFloat.cpp
  ${XERCESC}/util/XMLASCIITranscoder.cpp
  ${XERCESC}/util/XMLBigDecimal.cpp
  ${XERCESC}/util/XMLBigInteger.cpp
  ${XERCESC}/util/XMLChar.cpp
  ${XERCESC}/util/XMLChTranscoder.cpp
  ${XERCESC}/util/XMLDateTime.cpp
  ${XERCESC}/util/XMLDouble.cpp
  ${XERCESC}/util/XMLEBCDICTranscoder.cpp
  ${XERCESC}/util/XMLException.cpp
  ${XERCESC}/util/XMLFloat.cpp
  ${XERCESC}/util/XMLIBM1047Transcoder.cpp
  ${XERCESC}/util/XMLIBM1140Transcoder.cpp
  ${XERCESC}/util/XMLInitializer.cpp
  ${XERCESC}/util/XMLMsgLoader.cpp
  ${XERCESC}/util/XMLNumber.cpp
  ${XERCESC}/util/XMLString.cpp
  ${XERCESC}/util/XMLStringTokenizer.cpp
  ${XERCESC}/util/XMLUCS4Transcoder.cpp
  ${XERCESC}/util/XMLUni.cpp
  ${XERCESC}/util/XMLUri.cpp
  ${XERCESC}/util/XMLURL.cpp
  ${XERCESC}/util/XMLUTF16Transcoder.cpp
  ${XERCESC}/util/XMLUTF8Transcoder.cpp
  ${XERCESC}/util/XMLWin1252Transcoder.cpp
  ${XERCESC}/util/NetAccessors/BinHTTPInputStreamCommon.cpp
  ${XERCESC}/util/regx/ASCIIRangeFactory.cpp
  ${XERCESC}/util/regx/BlockRangeFactory.cpp
  ${XERCESC}/util/regx/BMPattern.cpp
  ${XERCESC}/util/regx/CharToken.cpp
  ${XERCESC}/util/regx/ClosureToken.cpp
  ${XERCESC}/util/regx/ConcatToken.cpp
  ${XERCESC}/util/regx/Match.cpp
  ${XERCESC}/util/regx/Op.cpp
  ${XERCESC}/util/regx/OpFactory.cpp
  ${XERCESC}/util/regx/ParenToken.cpp
  ${XERCESC}/util/regx/ParserForXMLSchema.cpp
  ${XERCESC}/util/regx/RangeFactory.cpp
  ${XERCESC}/util/regx/RangeToken.cpp
  ${XERCESC}/util/regx/RangeTokenMap.cpp
  ${XERCESC}/util/regx/RegularExpression.cpp
  ${XERCESC}/util/regx/RegxParser.cpp
  ${XERCESC}/util/regx/RegxUtil.cpp
  ${XERCESC}/util/regx/StringToken.cpp
  ${XERCESC}/util/regx/Token.cpp
  ${XERCESC}/util/regx/TokenFactory.cpp
  ${XERCESC}/util/regx/UnicodeRangeFactory.cpp
  ${XERCESC}/util/regx/UnionToken.cpp
  ${XERCESC}/util/regx/XMLRangeFactory.cpp
  ${XERCESC}/util/regx/XMLUniCharacter.cpp
  ${XERCESC}/framework/LocalFileFormatTarget.cpp
  ${XERCESC}/framework/LocalFileInputSource.cpp
  ${XERCESC}/framework/MemBufFormatTarget.cpp
  ${XERCESC}/framework/MemBufInputSource.cpp
  ${XERCESC}/framework/StdInInputSource.cpp
  ${XERCESC}/framework/StdOutFormatTarget.cpp
  ${XERCESC}/framework/URLInputSource.cpp
  ${XERCESC}/framework/Wrapper4DOMLSInput.cpp
  ${XERCESC}/framework/Wrapper4InputSource.cpp
  ${XERCESC}/framework/XMLAttDef.cpp
  ${XERCESC}/framework/XMLAttDefList.cpp
  ${XERCESC}/framework/XMLAttr.cpp
  ${XERCESC}/framework/XMLBuffer.cpp
  ${XERCESC}/framework/XMLBufferMgr.cpp
  ${XERCESC}/framework/XMLContentModel.cpp
  ${XERCESC}/framework/XMLDTDDescription.cpp
  ${XERCESC}/framework/XMLElementDecl.cpp
  ${XERCESC}/framework/XMLEntityDecl.cpp
  ${XERCESC}/framework/XMLFormatter.cpp
  ${XERCESC}/framework/XMLGrammarDescription.cpp
  ${XERCESC}/framework/XMLGrammarPoolImpl.cpp
  ${XERCESC}/framework/XMLNotationDecl.cpp
  ${XERCESC}/framework/XMLRecognizer.cpp
  ${XERCESC}/framework/XMLRefInfo.cpp
  ${XERCESC}/framework/XMLSchemaDescription.cpp
  ${XERCESC}/framework/XMLValidator.cpp
  ${XERCESC}/framework/psvi/PSVIAttribute.cpp
  ${XERCESC}/framework/psvi/PSVIAttributeList.cpp
  ${XERCESC}/framework/psvi/PSVIElement.cpp
  ${XERCESC}/framework/psvi/PSVIItem.cpp
  ${XERCESC}/framework/psvi/XSAnnotation.cpp
  ${XERCESC}/framework/psvi/XSAttributeDeclaration.cpp
  ${XERCESC}/framework/psvi/XSAttributeGroupDefinition.cpp
  ${XERCESC}/framework/psvi/XSAttributeUse.cpp
  ${XERCESC}/framework/psvi/XSComplexTypeDefinition.cpp
  ${XERCESC}/framework/psvi/XSElementDeclaration.cpp
  ${XERCESC}/framework/psvi/XSFacet.cpp
  ${XERCESC}/framework/psvi/XSIDCDefinition.cpp
  ${XERCESC}/framework/psvi/XSModel.cpp
  ${XERCESC}/framework/psvi/XSModelGroup.cpp
  ${XERCESC}/framework/psvi/XSModelGroupDefinition.cpp
  ${XERCESC}/framework/psvi/XSMultiValueFacet.cpp
  ${XERCESC}/framework/psvi/XSNamespaceItem.cpp
  ${XERCESC}/framework/psvi/XSNotationDeclaration.cpp
  ${XERCESC}/framework/psvi/XSObject.cpp
  ${XERCESC}/framework/psvi/XSParticle.cpp
  ${XERCESC}/framework/psvi/XSSimpleTypeDefinition.cpp
  ${XERCESC}/framework/psvi/XSTypeDefinition.cpp
  ${XERCESC}/framework/psvi/XSValue.cpp
  ${XERCESC}/framework/psvi/XSWildcard.cpp
  ${XERCESC}/internal/BinFileOutputStream.cpp
  ${XERCESC}/internal/BinMemOutputStream.cpp
  ${XERCESC}/framework/BinOutputStream.cpp
  ${XERCESC}/internal/DGXMLScanner.cpp
  ${XERCESC}/internal/ElemStack.cpp
  ${XERCESC}/internal/IGXMLScanner.cpp
  ${XERCESC}/internal/IGXMLScanner2.cpp
  ${XERCESC}/internal/MemoryManagerImpl.cpp
  ${XERCESC}/internal/ReaderMgr.cpp
  ${XERCESC}/internal/SGXMLScanner.cpp
  ${XERCESC}/internal/ValidationContextImpl.cpp
  ${XERCESC}/internal/VecAttributesImpl.cpp
  ${XERCESC}/internal/VecAttrListImpl.cpp
  ${XERCESC}/internal/WFXMLScanner.cpp
  ${XERCESC}/internal/XMLReader.cpp
  ${XERCESC}/internal/XMLScanner.cpp
  ${XERCESC}/internal/XMLScannerResolver.cpp
  ${XERCESC}/internal/XProtoType.cpp
  ${XERCESC}/internal/XSAXMLScanner.cpp
  ${XERCESC}/internal/XSerializeEngine.cpp
  ${XERCESC}/internal/XSObjectFactory.cpp
  ${XERCESC}/internal/XTemplateSerializer.cpp
  ${XERCESC}/sax/Dummy.cpp
  ${XERCESC}/sax/InputSource.cpp
  ${XERCESC}/sax/SAXException.cpp
  ${XERCESC}/sax/SAXParseException.cpp
  ${XERCESC}/parsers/AbstractDOMParser.cpp
  ${XERCESC}/parsers/DOMLSParserImpl.cpp
  ${XERCESC}/parsers/SAX2XMLFilterImpl.cpp
  ${XERCESC}/parsers/SAX2XMLReaderImpl.cpp
  ${XERCESC}/parsers/SAXParser.cpp
  ${XERCESC}/parsers/XercesDOMParser.cpp
  ${XERCESC}/validators/common/AllContentModel.cpp
  ${XERCESC}/validators/common/CMAny.cpp
  ${XERCESC}/validators/common/CMBinaryOp.cpp
  ${XERCESC}/validators/common/CMUnaryOp.cpp
  ${XERCESC}/validators/common/ContentLeafNameTypeVector.cpp
  ${XERCESC}/validators/common/ContentSpecNode.cpp
  ${XERCESC}/validators/common/DFAContentModel.cpp
  ${XERCESC}/validators/common/Grammar.cpp
  ${XERCESC}/validators/common/GrammarResolver.cpp
  ${XERCESC}/validators/common/MixedContentModel.cpp
  ${XERCESC}/validators/common/SimpleContentModel.cpp
  ${XERCESC}/validators/datatype/AbstractNumericFacetValidator.cpp
  ${XERCESC}/validators/datatype/AbstractNumericValidator.cpp
  ${XERCESC}/validators/datatype/AbstractStringValidator.cpp
  ${XERCESC}/validators/datatype/AnySimpleTypeDatatypeValidator.cpp
  ${XERCESC}/validators/datatype/AnyURIDatatypeValidator.cpp
  ${XERCESC}/validators/datatype/Base64BinaryDatatypeValidator.cpp
  ${XERCESC}/validators/datatype/BooleanDatatypeValidator.cpp
  ${XERCESC}/validators/datatype/DatatypeValidator.cpp
  ${XERCESC}/validators/datatype/DatatypeValidatorFactory.cpp
  ${XERCESC}/validators/datatype/DateDatatypeValidator.cpp
  ${XERCESC}/validators/datatype/DateTimeDatatypeValidator.cpp
  ${XERCESC}/validators/datatype/DateTimeValidator.cpp
  ${XERCESC}/validators/datatype/DayDatatypeValidator.cpp
  ${XERCESC}/validators/datatype/DecimalDatatypeValidator.cpp
  ${XERCESC}/validators/datatype/DoubleDatatypeValidator.cpp
  ${XERCESC}/validators/datatype/DurationDatatypeValidator.cpp
  ${XERCESC}/validators/datatype/ENTITYDatatypeValidator.cpp
  ${XERCESC}/validators/datatype/FloatDatatypeValidator.cpp
  ${XERCESC}/validators/datatype/HexBinaryDatatypeValidator.cpp
  ${XERCESC}/validators/datatype/IDDatatypeValidator.cpp
  ${XERCESC}/validators/datatype/IDREFDatatypeValidator.cpp
  ${XERCESC}/validators/datatype/ListDatatypeValidator.cpp
  ${XERCESC}/validators/datatype/MonthDatatypeValidator.cpp
  ${XERCESC}/validators/datatype/MonthDayDatatypeValidator.cpp
  ${XERCESC}/validators/datatype/NameDatatypeValidator.cpp
  ${XERCESC}/validators/datatype/NCNameDatatypeValidator.cpp
  ${XERCESC}/validators/datatype/NOTATIONDatatypeValidator.cpp
  ${XERCESC}/validators/datatype/QNameDatatypeValidator.cpp
  ${XERCESC}/validators/datatype/StringDatatypeValidator.cpp
  ${XERCESC}/validators/datatype/TimeDatatypeValidator.cpp
  ${XERCESC}/validators/datatype/UnionDatatypeValidator.cpp
  ${XERCESC}/validators/datatype/XMLCanRepGroup.cpp
  ${XERCESC}/validators/datatype/YearDatatypeValidator.cpp
  ${XERCESC}/validators/datatype/YearMonthDatatypeValidator.cpp
  ${XERCESC}/validators/DTD/DTDAttDef.cpp
  ${XERCESC}/validators/DTD/DTDAttDefList.cpp
  ${XERCESC}/validators/DTD/DTDElementDecl.cpp
  ${XERCESC}/validators/DTD/DTDEntityDecl.cpp
  ${XERCESC}/validators/DTD/DTDGrammar.cpp
  ${XERCESC}/validators/DTD/DTDScanner.cpp
  ${XERCESC}/validators/DTD/DTDValidator.cpp
  ${XERCESC}/validators/DTD/XMLDTDDescriptionImpl.cpp
  ${XERCESC}/validators/schema/ComplexTypeInfo.cpp
  ${XERCESC}/validators/schema/GeneralAttributeCheck.cpp
  ${XERCESC}/validators/schema/NamespaceScope.cpp
  ${XERCESC}/validators/schema/SchemaAttDef.cpp
  ${XERCESC}/validators/schema/SchemaAttDefList.cpp
  ${XERCESC}/validators/schema/SchemaElementDecl.cpp
  ${XERCESC}/validators/schema/SchemaGrammar.cpp
  ${XERCESC}/validators/schema/SchemaInfo.cpp
  ${XERCESC}/validators/schema/SchemaSymbols.cpp
  ${XERCESC}/validators/schema/SchemaValidator.cpp
  ${XERCESC}/validators/schema/SubstitutionGroupComparator.cpp
  ${XERCESC}/validators/schema/TraverseSchema.cpp
  ${XERCESC}/validators/schema/XercesAttGroupInfo.cpp
  ${XERCESC}/validators/schema/XercesElementWildcard.cpp
  ${XERCESC}/validators/schema/XercesGroupInfo.cpp
  ${XERCESC}/validators/schema/XMLSchemaDescriptionImpl.cpp
  ${XERCESC}/validators/schema/XSDDOMParser.cpp
  ${XERCESC}/validators/schema/XSDErrorReporter.cpp
  ${XERCESC}/validators/schema/XSDLocator.cpp
  ${XERCESC}/validators/schema/XUtil.cpp
  ${XERCESC}/validators/schema/identity/FieldActivator.cpp
  ${XERCESC}/validators/schema/identity/FieldValueMap.cpp
  ${XERCESC}/validators/schema/identity/IC_Field.cpp
  ${XERCESC}/validators/schema/identity/IC_Key.cpp
  ${XERCESC}/validators/schema/identity/IC_KeyRef.cpp
  ${XERCESC}/validators/schema/identity/IC_Selector.cpp
  ${XERCESC}/validators/schema/identity/IC_Unique.cpp
  ${XERCESC}/validators/schema/identity/IdentityConstraint.cpp
  ${XERCESC}/validators/schema/identity/IdentityConstraintHandler.cpp
  ${XERCESC}/validators/schema/identity/ValueStore.cpp
  ${XERCESC}/validators/schema/identity/ValueStoreCache.cpp
  ${XERCESC}/validators/schema/identity/XercesXPath.cpp
  ${XERCESC}/validators/schema/identity/XPathMatcher.cpp
  ${XERCESC}/validators/schema/identity/XPathMatcherStack.cpp
  ${XERCESC}/validators/schema/identity/XPathSymbols.cpp
  ${XERCESC}/sax2/sax2Dummy.cpp
  ${XERCESC}/dom/DOMException.cpp
  ${XERCESC}/dom/DOMLSException.cpp
  ${XERCESC}/dom/DOMRangeException.cpp
  ${XERCESC}/dom/DOMXPathException.cpp
  ${XERCESC}/dom/impl/DOMAttrImpl.cpp
  ${XERCESC}/dom/impl/DOMAttrMapImpl.cpp
  ${XERCESC}/dom/impl/DOMAttrNSImpl.cpp
  ${XERCESC}/dom/impl/DOMCDATASectionImpl.cpp
  ${XERCESC}/dom/impl/DOMCharacterDataImpl.cpp
  ${XERCESC}/dom/impl/DOMChildNode.cpp
  ${XERCESC}/dom/impl/DOMCommentImpl.cpp
  ${XERCESC}/dom/impl/DOMConfigurationImpl.cpp
  ${XERCESC}/dom/impl/DOMDeepNodeListImpl.cpp
  ${XERCESC}/dom/impl/DOMDocumentFragmentImpl.cpp
  ${XERCESC}/dom/impl/DOMDocumentImpl.cpp
  ${XERCESC}/dom/impl/DOMDocumentTypeImpl.cpp
  ${XERCESC}/dom/impl/DOMElementImpl.cpp
  ${XERCESC}/dom/impl/DOMElementNSImpl.cpp
  ${XERCESC}/dom/impl/DOMEntityImpl.cpp
  ${XERCESC}/dom/impl/DOMEntityReferenceImpl.cpp
  ${XERCESC}/dom/impl/DOMErrorImpl.cpp
  ${XERCESC}/dom/impl/DOMImplementationImpl.cpp
  ${XERCESC}/dom/impl/DOMImplementationListImpl.cpp
  ${XERCESC}/dom/impl/DOMImplementationRegistry.cpp
  ${XERCESC}/dom/impl/DOMLocatorImpl.cpp
  ${XERCESC}/dom/impl/DOMLSInputImpl.cpp
  ${XERCESC}/dom/impl/DOMLSOutputImpl.cpp
  ${XERCESC}/dom/impl/DOMLSSerializerImpl.cpp
  ${XERCESC}/dom/impl/DOMNamedNodeMapImpl.cpp
  ${XERCESC}/dom/impl/DOMNodeIDMap.cpp
  ${XERCESC}/dom/impl/DOMNodeImpl.cpp
  ${XERCESC}/dom/impl/DOMNodeIteratorImpl.cpp
  ${XERCESC}/dom/impl/DOMNodeListImpl.cpp
  ${XERCESC}/dom/impl/DOMNodeVector.cpp
  ${XERCESC}/dom/impl/DOMNormalizer.cpp
  ${XERCESC}/dom/impl/DOMNotationImpl.cpp
  ${XERCESC}/dom/impl/DOMParentNode.cpp
  ${XERCESC}/dom/impl/DOMProcessingInstructionImpl.cpp
  ${XERCESC}/dom/impl/DOMRangeImpl.cpp
  ${XERCESC}/dom/impl/DOMStringListImpl.cpp
  ${XERCESC}/dom/impl/DOMStringPool.cpp
  ${XERCESC}/dom/impl/DOMTextImpl.cpp
  ${XERCESC}/dom/impl/DOMTreeWalkerImpl.cpp
  ${XERCESC}/dom/impl/DOMTypeInfoImpl.cpp
  ${XERCESC}/dom/impl/DOMXPathExpressionImpl.cpp
  ${XERCESC}/dom/impl/DOMXPathNSResolverImpl.cpp
  ${XERCESC}/dom/impl/DOMXPathResultImpl.cpp
  ${XERCESC}/dom/impl/XSDElementNSImpl.cpp
  ${XERCESC}/xinclude/XIncludeDOMDocumentProcessor.cpp
  ${XERCESC}/xinclude/XIncludeLocation.cpp
  ${XERCESC}/xinclude/XIncludeUtils.cpp
)

if(ENABLE_MSGLOADER_INMEMORY)
  set(SRC_MSGLOADER 
    ${XERCESC}/util/MsgLoaders/InMemory/InMemMsgLoader.cpp    
    ${XERCESC}/util/MsgLoaders/InMemory/InMemMsgLoader.hpp
  )
  add_definitions(-DXERCES_USE_MSGLOADER_INMEMORY)
endif()

if(ENABLE_MSGLOADER_WIN32)
  set(SRC_MSGLOADER 
    ${XERCESC}/util/MsgLoaders/Win32/Win32MsgLoader.cpp
    ${XERCESC}/util/MsgLoaders/Win32/Win32MsgLoader.hpp
    ${XERCESC}/util/MsgLoaders/Win32/Version.rc
  )
  add_definitions(-DXERCES_USE_WIN32_MSGLOADER)
endif()

if(ENABLE_TRANSCODER_WINDOWS)
  set(SRC_TRANSCODER 
    ${XERCESC}/util/Transcoders/Win32/Win32TransService.hpp
    ${XERCESC}/util/Transcoders/Win32/Win32TransService.cpp
  )
  add_definitions(-DXERCES_USE_TRANSCODER_WINDOWS)
endif()

if(ENABLE_NETWORK AND ENABLE_NETACCESSOR_WINSOCK)
  set(SRC_NETACCESSOR 
    ${XERCESC}/util/NetAccessors/WinSock/BinHTTPURLInputStream.hpp
    ${XERCESC}/util/NetAccessors/WinSock/WinSockNetAccessor.hpp
    ${XERCESC}/util/NetAccessors/WinSock/BinHTTPURLInputStream.cpp
    ${XERCESC}/util/NetAccessors/WinSock/WinSockNetAccessor.cpp
  )
  add_definitions(-DXERCES_USE_NETACCESSOR_WINSOCK)
endif()

if(WIN32)
  add_definitions(-DXERCES_USE_FILEMGR_WINDOWS)
  add_definitions(-DXERCES_USE_MUTEXMGR_WINDOWS)
  set(SRC_UTILS_WIN32 
    ${XERCESC}/util/FileManagers/WindowsFileMgr.hpp
    ${XERCESC}/util/FileManagers/WindowsFileMgr.cpp
    ${XERCESC}/util/MutexManagers/WindowsMutexMgr.cpp
    ${XERCESC}/util/MutexManagers/WindowsMutexMgr.hpp
  )

endif()
include_directories(${PROJECT_ROOT}/src)
#====================================================
# common flags
#====================================================

if(WIN32)
  add_definitions(-D_WINDOWS)
  add_definitions(-DWIN32)
  if(LIBRARY_BITS STREQUAL "64")
    add_definitions(-DWIN64)
  endif()

  if(MSVC)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc /Zi /wd4996 -D_CRT_SECURE_NO_DEPRECATE")
    set(FLAGS_RELEASE "${FLAGS_RELEASE} /O1 /Ob2 /Oy- /GL /GF /GS- /Gy /MT")
    set(FLAGS_DEBUG "${FLAGS_DEBUG} /Od /MTd /GS /RTC1")
  endif(MSVC)

  if(CMAKE_COMPILER_IS_GNUCXX)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive")
    set(FLAGS_RELEASE "${FLAGS_RELEASE} -s -O1")
    set(FLAGS_DEBUG "${FLAGS_DEBUG}")
  endif(CMAKE_COMPILER_IS_GNUCXX)

  add_definitions(-DXERCES_BUILDING_LIBRARY)
  add_definitions(-DXERCES_PATH_DELIMITER_BACKSLASH)
  add_definitions(-DHAVE_STRICMP)
  add_definitions(-DHAVE_STRNICMP)
  add_definitions(-DHAVE_LIMITS_H)
  add_definitions(-DHAVE_SYS_TIMEB_H)
  add_definitions(-DHAVE_FTIME)
  add_definitions(-DHAVE_WCSUPR)
  add_definitions(-DHAVE_WCSLWR)
  add_definitions(-DHAVE_WCSICMP)
  add_definitions(-DHAVE_WCSNICMP)
  add_definitions(-DXERCES_BUILDING_LIBRARY)

endif(WIN32)

set(FLAGS_RELEASE "${FLAGS_RELEASE} -DNDEBUG")
set(FLAGS_DEBUG "${FLAGS_DEBUG} -D_DEBUG")

if(LINK_TYPE STREQUAL "STATIC")
  add_definitions(-DXERCES_STATIC_LIBRARY)
endif()

set(CMAKE_CXX_FLAGS_RELEASE "${FLAGS_RELEASE}")
set(CMAKE_C_FLAGS_RELEASE "${FLAGS_RELEASE}")
set(CMAKE_CXX_FLAGS_DEBUG "${FLAGS_DEBUG}")
set(CMAKE_C_FLAGS_DEBUG "${FLAGS_DEBUG}")

#====================================================
# build
#====================================================
set(SRC_FILES ${COMMON_SRC_XERCESC} ${SRC_NETACCESSOR} ${SRC_MSGLOADER} ${SRC_TRANSCODER} ${SRC_UTILS_WIN32})
add_library(xerces-c_3_1 ${LINK_TYPE} ${SRC_FILES})